feat: improve openapi spec
