# src/main/java/ru/sfedu/teamselection/dto/team/TeamSearchOptionsDto.java
@@ -7,6 +7,7 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import ru.sfedu.teamselection.dto.ProjectTypeDto;
 import ru.sfedu.teamselection.dto.TechnologyDto;
 
 @Getter
