# src/main/java/ru/sfedu/teamselection/dto/team/TeamUpdateDto.java
@@ -13,6 +13,7 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import ru.sfedu.teamselection.dto.ProjectTypeDto;
 import ru.sfedu.teamselection.dto.TechnologyDto;
 
 
