# src/main/resources/openapi.yaml
@@ -15,7 +15,7 @@ tags:
     description: API для работы со пользователями
   - name: StudentController
     description: API для работы со студентами
-  - name: TechnologyController
+  - name: Technology
     description: API для взаимодействия с возможными технологиями студентов и проектов
   - name: TracksController
     description: API для работы со треками
@@ -333,6 +333,61 @@ paths:
             'application/json':
               schema:
                 type: string
+  /api/v1/technologies:
+    get:
+      tags:
+        - Technology
+      summary: Получение списка всех технологий
+      operationId: findAllTechnologies
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TechnologyDto'
+    post:
+      tags:
+        - Technology
+      summary: Создание новой технологии
+      operationId: createTechnology
+      requestBody:
+        description: Сущность технологии
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TechnologyDto'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                $ref: '#/components/schemas/TechnologyDto'
+  /api/v1/technologies/{id}:
+    delete:
+      tags:
+        - Technology
+      summary: Удаление технологии
+      operationId: deleteTechnology
+      parameters:
+        - name: id
+          in: path
+          description: Id технологии
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: OK
+          content:
+            'application/json':
+              schema:
+                type: string
 components:
   schemas:
     StudentUpdateDto:
@@ -440,26 +495,39 @@ components:
           type: boolean
           description: Активен ли аккаунт
           example: true
-    PageResponse1:
+    ProjectTypeDto:
       type: object
-      required: [content, page, size, totalElements, totalPages]
+      required:
+        - name
       properties:
-        content:
-          type: array
-          items: {}
-        page:
-          type: integer
-          format: int32
-          minimum: 0
-        size:
-          type: integer
-          format: int32
-          minimum: 1
-        totalElements:
+        id:
           type: integer
           format: int64
-          minimum: 0
-        totalPages:
+          minimum: 1
+          description: ID типа проекта
+          example: 123
+          nullable: true
+        name:
+          type: string
+          minLength: 3
+          maxLength: 20
+          description: Название типа проекта
+          example: "Mobile"
+    TechnologyDto:
+      type: object
+      required:
+        - name
+      properties:
+        id:
           type: integer
-          format: int32
-          minimum: 0
+          format: int64
+          minimum: 1
+          description: ID технологии
+          example: 123
+          nullable: true
+        name:
+          type: string
+          minLength: 3
+          description: Название технологии
+          example: "C++"
+
